--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ HOST_URL=http://localhost:8080
 
 API_KEY=AIzaSyCqrzHcexkRraXbFDX5ThFyW3Kn_pvmIOs
 AUTH_DOMAIN=pet-hotelspa.firebaseapp.com
-DATABASE_URL=https://pet-hotelspa.firebaseio.com
+DATABASE_URL=https://pet-hotelspa-default-rtdb.europe-west1.firebasedatabase.app
 PROJECT_ID=pet-hotelspa
 STORAGE_BUCKET=pet-hotelspa.appspot.com
 MESSAGING_SENDER_ID=244454942843
-APP_ID=1:244454942843:web:c6367a61cf579b4f0c9ade
+APP_ID=1:244454942843:web:d0d5c590acf7ce670c9ade
 
